más pages de sinopsis

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                         <li><a href="./pages/gays.html">Gays</a></li>
                         <li><a href="./pages/trans.html">Trans</a></li>
                         <li><a href="./pages/ingles.html">Inglés</a></li>
-                        <li><a href="./pages/sinopsis.html">Sinopsis</a></li>
-                        </ul>
+                    </ul>
                 </div>
             </nav>
         </div>
@@ -56,14 +55,23 @@
                 <h4>CHICAS QUE AMAN A CHICAS</h4>
                 <a href="./pages/lesbianas.html">
                     <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
-                    <img class="cover" src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
-                    <img class="cover" src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
-                    <img class="cover" src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
-                    <img class="cover" src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
-                    <img class="cover" src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
-                    <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/el-rio.jpg" alt="El río de las primeras veces - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/los-siete.jpg" alt="Los siete maridos de Evelyn Hugo- Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/la-insensata-geometria-del-amor.png" alt="La insensata geometria del amor - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/el-plan-c.jpg" alt="El plan c - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/12700.jpg" alt="12700 km - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/7900.jpg" alt="7900 millas - Portada de libro">
                     <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
-                    <img class="cover" src="./assets/imagenes/book-covers/hasta-que-una-firma-nos-separe.jpg" alt="Hasta que una firma nos separe - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/medusas.jpg" alt="La isla de las medusas - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/nia.jpg" alt="Nia - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/perdida.jpg" alt="Perdida en el cosmos - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/girl.jpg" alt="Girl, girl, girl - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/una-de-esas.jpg" alt="Una de esas chicas - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/matices.jpg" alt="Matices - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/cuarta-fase.jpg" alt="Cuarta fase - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/sombras.jpg" alt="Bajo las sombras - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/armonia.jpg" alt="Armonia secreta - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/caos.jpg" alt="Cazar el caos - Portada de libro">
                     </a>
                 </div>
         </section>
@@ -71,14 +79,25 @@
             <div class="container">
                 <h4>CHICO CONOCE A CHICO</h4>
                 <a href="./pages/gays.html">
-                    <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
-                    <img class="cover" src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
-                    <img class="cover" src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
-                    <img class="cover" src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
-                    <img class="cover" src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
-                    <img class="cover" src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
-                    <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
-                    <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/lo-que-nunca-fuimos.jpg" alt="Lo que nunca fuimos - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/y-si-fueramos-nosotros.jpg" alt="¿Y si fueramos nosotros? - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/alguien-para-ti.jpg" alt="Alguien para ti - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/lo-que-cuentan-de-nosotros.jpg" alt="Lo que cuentan de nosotros - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/rojo-blanco.jpg" alt="Rojo, blanco y sangre azul - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/heart-one.jpg" alt="Heartstopper 1. Dos Chicos Juntos - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/heart-two.jpg" alt="Heartstopper 2. Mi persona favorita - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/heart-three.jpg" alt="Heartstopper 3. Un paso adelante - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/heart-four.jpg" alt="Heartstopper 4. Más que palabras - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/llamame-por-tu-nombre.jpg" alt="Llámame por tu nombre - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/la-busqueda-del-cliche-perfecto.jpg" alt="La búsqueda del cliché perfecto - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/el-cliche-imperfecto.jpg" alt="El cliché (im)perfecto que somos tú y yo - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/hasta-que-una-firma-nos-separe.jpg" alt="Hasta que una firma nos separe - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/tu-lugar-es-conmigo.jpg" alt="Tu lugar es conmigo - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/no-solo-eres-amor.jpg" alt="No solo eres amor - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/tres-pasos-atras.jpg" alt="Tres pasos atrás- Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/aprendiz-de-principe.jpg" alt="Aprendíz de príncipe- Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/palomitas-en-la-universidad.jpg" alt="Palomitas en la universidad - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/quiero-vivir-en-voz-alta.jpg" alt="Quiero vivir en voz alta - Portada de libro">
                 </a>
             </div>
         </section>
@@ -86,14 +105,15 @@
             <div class="container">
                 <h4>NO TODO ES BLANCO O NEGRO</h4>
                 <a href="./pages/trans.html">
-                <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
-                <img class="cover" src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
-                <img class="cover" src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
-                <img class="cover" src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
-                <img class="cover" src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
-                <img class="cover" src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
-                <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
-                <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/mi-hermano-se-llama-jessica.png" alt="Mi hermano se llama Jessica- Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/us.jpg" alt="Us - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/amor-trans.jpg" alt="(H)Amor 6 Trans- Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/mi-adolscencia-trans.jpg" alt="Mi adolescencia trans- Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/stay-gold.png" alt="Stay gold: No dejes de ser tú mismo - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/george-simplemente.jpg" alt="George: Simplemente sé tú mismo - Portada de libro - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/soy-sabrina.jpg" alt="Soy Sabrina, soy Santiago- Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/que-nos-hace-humanos.jpg" alt="Qué nos hace humanos - Portada de libro - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/si-yo-fuera.jpg" alt="Si yo fuera tu chica - Portada de libro">
                 </a>
             </div>
         </section>
@@ -101,14 +121,22 @@
             <div class="container">
                 <h4>EN EL IDIOMA ORIGINAL</h4>
                 <a href="./pages/ingles.html">
-                <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
-                <img class="cover" src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
-                <img class="cover" src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
-                <img class="cover" src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
-                <img class="cover" src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
-                <img class="cover" src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
-                <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
-                <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/melt-with-you.jpg" alt="Melt with you- Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/her-royal-highness.jpg" alt="Her royal highness - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/cool-for-the-summer.jpg" alt="Cool for the summer - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/mistakes-were-made.jpg" alt="Mistakes were made - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/how-to-excavate-a-heart.jpg" alt="How to excavate a heart - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/how-to-succeed-in-witchcraft.jpg" alt="How to succeed in witchcraft - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/improbable-magic-for-cynical-witches.jpg" alt="Improbable magic for cynical witches- Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/it-goes-like-this.jpg" alt="It goes like this - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/she-gets-the-girl.jpg" alt="She gets the girl- Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/youngblood.jpg" alt="Youngblood - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/this-witches-dont-burn.jpg" alt="These witches don't burn- Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/this-coven-wont-break.jpg" alt="This coven won't break - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/this-spell-cant-last.jpg" alt="This spell can't last - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/the-falling-in-love-montage.jpg" alt="The falling in love montage - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/the-coldest-touch.jpg" alt="The coldest touch - Portada de libro">
                 </a>
             </div>
         </section>
@@ -123,7 +151,7 @@
                 <li><a href="./pages/gays.html">Gays</a></li>
                 <li><a href="./pages/trans.html">Trans</a></li>
                 <li><a href="./pages/ingles.html">Inglés</a></li>
-                <li><a href="./pages/sinopsis.html">Sinopsis</a></li>
+            </ul>
         </div>
         <div class="social fot-3">
             <span>Seguinos</span>
