--- a/pages/gays.html
+++ b/pages/gays.html
@@ -26,12 +26,11 @@
                 <label for="toggle"><i class="material-icons">menu</i></label>
                 <div class="menu">
                     <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="../pages/lesbianas.html">Lesbianas</a></li>
-                    <li><a href="#">Gays</a></li>
-                    <li><a href="../pages/trans.html">Trans</a></li>
-                    <li><a href="../pages/ingles.html">Inglés</a></li>
-                    <li><a href="../pages/sinopsis.html">Sinopsis</a></li>
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="../pages/lesbianas.html">Lesbianas</a></li>
+                        <li><a href="#">Gays</a></li>
+                        <li><a href="../pages/trans.html">Trans</a></li>
+                        <li><a href="../pages/ingles.html">Inglés</a></li>
                     </ul>
                 </div>
             </nav>
@@ -40,7 +39,7 @@
     <main>
         <div class="rainbow"></div>
         <section class="banner-gay">
-            <div>
+            <div class="banner-text">
                 <h1>Books About Us</h1>
                 <p>"Quizás eramos amigos y luego amantes. Pero quizá sea eso lo que son los amantes en realidad"</p>
                 <p>Call me by your name</p>
@@ -48,22 +47,167 @@
         </section>
         <section>
             <div>
-                <h2>Para Ellos</h2>
+                <h3>Chico conoce a chico</h3>
             </div>
         </section>
         <section class="card-container">
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="nunca">
+                <img src="../assets/imagenes/book-covers/lo-que-nunca-fuimos.jpg" alt="Lo que nunca fuimos- Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>Lo que nunca fuimos</h5>
+                    <p>Mike Lightwood</p>
+                    <a href="../pages/sinopsis-gay.html#nuncas" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="nosotros">
+                <img src="../assets/imagenes/book-covers/y-si-fueramos-nosotros.jpg" alt="¿Y si fueramos nosotros? - Portada de libro">
+                <div class="card-content">
+                    <h5>¿Y si fuéramos nosotros?</h5>
+                    <p>Becky Albertalli, Adam Silvera</p>
+                    <a href="../pages/sinopsis-gay.html#nosotross" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="apt">
+                <img src="../assets/imagenes/book-covers/alguien-para-ti.jpg" alt="Alguien para ti - Portada de libro">
+                <div class="card-content">
+                    <h5>Alguien para ti</h5>
+                    <p>Juan Arcones</p>
+                    <a href="../pages/sinopsis-gay.html#apts" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="cuentan">
+                <img src="../assets/imagenes/book-covers/lo-que-cuentan-de-nosotros.jpg" alt="Lo que cuentan de nosotros - Portada de libro">
+                <div class="card-content">
+                    <h5>Lo que cuentan de nosotros</h5>
+                    <p>Iñigo Aguas</p>
+                    <a href="../pages/sinopsis-gay.html#cuentans" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="rojo">
+                <img src="../assets/imagenes/book-covers/rojo-blanco.jpg" alt="Rojo, blanco y sangre azul - Portada de libro">
+                <div class="card-content">
+                    <h5>Rojo, blanco y sangre azul</h5>
+                    <p>Casey McQuiston</p>
+                    <a href="../pages/sinopsis-gay.html#rojos" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="heart1">
+                <img src="../assets/imagenes/book-covers/heart-one.jpg" alt="Heartstopper 1. Dos Chicos Juntos - Portada de libro">
+                <div class="card-content">
+                    <h5>Heartstopper 1. Dos Chicos Juntos</h5>
+                    <p>Alice Oseman</p>
+                    <a href="../pages/sinopsis-gay.html#heart1s" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="heart2">
+                <img src="../assets/imagenes/book-covers/heart-two.jpg" alt="Heartstopper 2. Mi persona favorita - Portada de libro">
+                <div class="card-content">
+                    <h5>Heartstopper 2. Mi persona favorita</h5>
+                    <p>Alice Oseman</p>
+                    <a href="../pages/sinopsis-gay.html#heart2s" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="heart3">
+                <img src="../assets/imagenes/book-covers/heart-three.jpg" alt="Heartstopper 3. Un paso adelante - Portada de libro">
+                <div class="card-content">
+                    <h5>Heartstopper 3. Un paso adelante</h5>
+                    <p>Alice Oseman</p>
+                    <a href="../pages/sinopsis-gay.html#heart3s" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="heart4">
+                <img src="../assets/imagenes/book-covers/heart-four.jpg" alt="Heartstopper 4. Más que palabras - Portada de libro">
+                <div class="card-content">
+                    <h5>Heartstopper 4. Más que palabras</h5>
+                    <p>Alice Oseman</p>
+                    <a href="../pages/sinopsis-gay.html#heart4s" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="llama">
+                <img src="../assets/imagenes/book-covers/llamame-por-tu-nombre.jpg" alt="Llámame por tu nombre - Portada de libro">
+                <div class="card-content">
+                    <h5>Llámame por tu nombre</h5>
+                    <p>André Aciman</p>
+                    <a href="../pages/sinopsis-gay.html#llamas" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="cliche1">
+                <img src="../assets/imagenes/book-covers/la-busqueda-del-cliche-perfecto.jpg" alt="La búsqueda del cliché perfecto - Portada de libro">
+                <div class="card-content">
+                    <h5>La búsqueda del cliché perfecto</h5>
+                    <p>Michelle Durán</p>
+                    <a href="../pages/sinopsis-gay.html#cliche1s" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="imper">
+                <img src="../assets/imagenes/book-covers/el-cliche-imperfecto.jpg" alt="El cliché (im)perfecto que somos tú y yo - Portada de libro">
+                <div class="card-content">
+                    <h5>El cliché (im)perfecto que somos tú y yo</h5>
+                    <p>Michelle Durán</p>
+                    <a href="../pages/sinopsis-gay.html#impers" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="firma">
+                <img src="../assets/imagenes/book-covers/hasta-que-una-firma-nos-separe.jpg" alt="Hasta que una firma nos separe - Portada de libro">
+                <div class="card-content">
+                    <h5>Hasta que una firma nos separe</h5>
+                    <p>Fernanda R. Rodriguez</p>
+                    <a href="../pages/sinopsis-gay.html#firmas" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="conmigo">
+                <img src="../assets/imagenes/book-covers/tu-lugar-es-conmigo.jpg" alt="Tu lugar es conmigo - Portada de libro">
+                <div class="card-content">
+                    <h5>Tu lugar es conmigo</h5>
+                    <p>Josh Taylor</p>
+                    <a href="../pages/sinopsis-gay.html#conmigos" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="solo">
+                <img src="../assets/imagenes/book-covers/no-solo-eres-amor.jpg" alt="No solo eres amor - Portada de libro">
+                <div class="card-content">
+                    <h5>No solo eres amor</h5>
+                    <p>Sonia Puente</p>
+                    <a href="../pages/sinopsis-gay.html#solos" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="pasos">
+                <img src="../assets/imagenes/book-covers/tres-pasos-atras.jpg" alt="Tres pasos atras - Portada de libro">
+                <div class="card-content">
+                    <h5>Tres pasos atrás</h5>
+                    <p>Jash Spina</p>
+                    <a href="../pages/sinopsis-gay.html#pasoss" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="principe">
+                <img src="../assets/imagenes/book-covers/aprendiz-de-principe.jpg" alt="Aprendíz de príncipe- Portada de libro">
+                <div class="card-content">
+                    <h5>Aprendiz de príncipe</h5>
+                    <p>Arianne Martín</p>
+                    <a href="../pages/sinopsis-gay.html#principes" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="palomita">
+                <img src="../assets/imagenes/book-covers/palomitas-en-la-universidad.jpg" alt="Palomitas en la universidad - Portada de libro">
+                <div class="card-content">
+                    <h5>Palomitas en la universidad</h5>
+                    <p>Roser A. Ochoa</p>
+                    <a href="../pages/sinopsis-gay.html#palomintas" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="vivir">
+                <img src="../assets/imagenes/book-covers/quiero-vivir-en-voz-alta.jpg" alt="Quiero vivir en voz alta - Portada de libro">
+                <div class="card-content">
+                    <h5>Quiero vivir en vos alta</h5>
+                    <p>Susana Herrero</p>
+                    <a href="../pages/sinopsis-gay.html#vivirs" target="_blank">Ver más...</a>
                 </div>
             </div>
         </section>
     </main>
     <footer class="grid-footer">
         <div class="fot-1">
-            <a href="../index.html"><img class="logo" src="./assets/imagenes/BAU.png" alt="Logo de la página"></a>
+            <a href="../index.html"><img class="logo" src="../assets/imagenes/BAU.png" alt="Logo de la página"></a>
         </div>
         <div class="list-footer fot-2">
             <ul>
@@ -71,16 +215,12 @@
                 <li><a href="#">Gays</a></li>
                 <li><a href="../pages/trans.html">Trans</a></li>
                 <li><a href="../pages/ingles.html">Inglés</a></li>
-                <li><a href="../pages/sinopsis.html">Sinopsis</a></li>
         </div>
         <div class="social fot-3">
             <span>Seguinos</span>
-            <a class="social-link" href="https://wa.me/qr/LCVV323CI6ZTB1" target="_blank"><img class="icon" src="../assets/imagenes/iconos/whatsapp-logo.png" alt="Logo de whatsapp">
-            </a>
+            <a class="social-link" href="https://wa.me/qr/LCVV323CI6ZTB1" target="_blank"><img class="icon" src="../assets/imagenes/iconos/whatsapp-logo.png" alt="Logo de whatsapp"></a>
             <a class="social-link" href="https://twitter.com/carlacast89?t=Sejik0FYmQeTZZW63l4Xrw&s=08" target="_blank"><img class="icon" src="../assets/imagenes/iconos/twitter-logo.png" alt="Logo de twitter"></a>
-            </a>
             <a class="social-link" href="https://instagram.com/booksaboutus.tuc?igshid=ZDdkNTZiNTM=" target="_blank"><img class="icon" src="../assets/imagenes/iconos/instagram-logo.png" alt="Logo de instagram"></a>
-            </a>
         </div>
     </footer>
 </body>
