--- a/pages/ingles.html
+++ b/pages/ingles.html
@@ -26,12 +26,11 @@
                 <label for="toggle"><i class="material-icons">menu</i></label>
                 <div class="menu">
                     <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="../pages/lesbianas.html">Lesbianas</a></li>
-                    <li><a href="../pages/gays.html">Gays</a></li>
-                    <li><a href="../pages/trans.html">Trans</a></li>
-                    <li><a href="#">Inglés</a></li>
-                    <li><a href="../pages/sinopsis.html">Sinopsis</a></li>
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="../pages/lesbianas.html">Lesbianas</a></li>
+                        <li><a href="../pages/gays.html">Gays</a></li>
+                        <li><a href="../pages/trans.html">Trans</a></li>
+                        <li><a href="#">Inglés</a></li>
                     </ul>
                 </div>
             </nav>
@@ -40,148 +39,151 @@
     <main>
         <div class="rainbow"></div>
         <section class="banner-ingles">
-            <div>
+            <div class="banner-text">
                 <h1>Books About Us</h1>
-                <p>The things that scare you the most are the things that bring you closer to who you’re meant to be.”</p>
+                <p>The things that scare you the most are the things that bring you closer to who you're meant to be.”</p>
                 <p>James Brandon, Ziggy, Stardust and Me</p>
             </div>
         </section>
         <section>
             <div>
-                <h2>En Inglés</h2>
+                <h3>En el idioma original</h3>
             </div>
         </section>
         <section class="card-container">
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="melt">
+                <img src="../assets/imagenes/book-covers/melt-with-you.jpg" alt="Melt with you- Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>Melt with you</h5>
+                    <p>Jennifer Dugan</p>
+                    <a href="../pages/sinopsis-ingles.html#melts" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="royal">
+                <img src="../assets/imagenes/book-covers/her-royal-highness.jpg" alt="Her royal highness - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>Her royal highnes</h5>
+                    <p>Rachel Hawkins</p>
+                    <a href="../pages/sinopsis-ingles.html#royals" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="cool">
+                <img src="../assets/imagenes/book-covers/cool-for-the-summer.jpg" alt="Cool for the summer - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>Cool for the summer</h5>
+                    <p>Dahlia Adler</p>
+                    <a href="../pages/sinopsis-ingles.html#cools" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="coven">
+                <img src="../assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>Coven</h5>
+                    <p>Jennifer Dugan</p>
+                    <a href="../pages/sinopsis-ingles.html#covens" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="mistakes">
+                <img src="../assets/imagenes/book-covers/mistakes-were-made.jpg" alt="Mistakes were made - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>Mistakes were made</h5>
+                    <p>Meryl Wilsner</p>
+                    <a href="../pages/sinopsis-ingles.html#mistakess" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="how">
+                <img src="../assets/imagenes/book-covers/how-to-excavate-a-heart.jpg" alt="How to excavate a heart - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>How to excavate a heart</h5>
+                    <p>Jake Maia Arlow</p>
+                    <a href="../pages/sinopsis-ingles.html#how" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="suc">
+                <img src="../assets/imagenes/book-covers/how-to-succeed-in-witchcraft.jpg" alt="How to succeed in witchcraft - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>How to succeed in witchcraft</h5>
+                    <p>Aislinn Brophy</p>
+                    <a href="../pages/sinopsis-ingles.html#sucs" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="magic">
+                <img src="../assets/imagenes/book-covers/improbable-magic-for-cynical-witches.jpg" alt="Improbable magic for cynical witches - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>                        <a href="../index.html" target="_blank">Ver más...</a>
-                    </div>
-            </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
-                <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>Improbable magic for cynical witches</h5>
+                    <p>Kate Scelsa</p>
+                    <a href="../pages/sinopsis-ingles.html#magics" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="goes">
+                <img src="../assets/imagenes/book-covers/it-goes-like-this.jpg" alt="It goes like this - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>It goes like this</h5>
+                    <p>Miel Moreland</p>
+                    <a href="../pages/sinopsis-ingles.html#goess" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="get">
+                <img src="../assets/imagenes/book-covers/she-gets-the-girl.jpg" alt="She gets the girl - Portada del libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>She gets the girl</h5>
+                    <p>Rachael Lippincott, Alyson Derrick</p>
+                    <a href="../pages/sinopsis-ingles.html#gets" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="young">
+                <img src="../assets/imagenes/book-covers/youngblood.jpg" alt="Youngblood - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>Youngblood</h5>
+                    <p>Sasha Laurens</p>
+                    <a href="../pages/sinopsis-ingles.html#youngs" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="burn">
+                <img src="../assets/imagenes/book-covers/this-witches-dont-burn.jpg" alt="This witches don't burn - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>This witches don't burn</h5>
+                    <p>Isabel Sterling</p>
+                    <a href="../pages/sinopsis-ingles.html#burns" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="break">
+                <img src="../assets/imagenes/book-covers/this-coven-wont-break.jpg" alt="This coven won't break - Isabel Sterling">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>This coven won't break</h5>
+                    <p>Isabel Sterling</p>
+                    <a href="../pages/sinopsis-ingles.html#breaks" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="last">
+                <img src="../assets/imagenes/book-covers/this-spell-cant-last.jpg" alt="This spell can't last - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>This spell can't last</h5>
+                    <p></p>
+                    <a href="../pages/sinopsis-ingles.html#lasts" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="montage">
+                <img src="../assets/imagenes/book-covers/the-falling-in-love-montage.jpg" alt="The falling in love montage - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>The falling in love montage</h5>
+                    <p>Ciara Smyth</p>
+                    <a href="../pages/sinopsis-ingles.html#montage" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="touch">
+                <img src="../assets/imagenes/book-covers/the-coldest-touch.jpg" alt="The coldest touch - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
-                <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>The coldest touch</h5>
+                    <p>Isabel Sterling</p>
+                    <a href="../pages/sinopsis-ingles.html#touchs" target="_blank">Ver más...</a>
                 </div>
             </div>
         </section>
     </main>
     <footer class="grid-footer">
         <div class="fot-1">
-            <a href="../index.html"><img class="logo" src="./assets/imagenes/BAU.png" alt="Logo de la página"></a>
+            <a href="../index.html"><img class="logo" src="../assets/imagenes/BAU.png" alt="Logo de la página"></a>
         </div>
         <div class="list-footer fot-2">
             <ul>
@@ -189,16 +191,12 @@
                 <li><a href="../pages/gays.html">Gays</a></li>
                 <li><a href="../pages/trans.html">Trans</a></li>
                 <li><a href="#">Inglés</a></li>
-                <li><a href="../pages/sinopsis.html">Sinopsis</a></li>
         </div>
         <div class="social fot-3">
             <span>Seguinos</span>
-            <a class="social-link" href="https://wa.me/qr/LCVV323CI6ZTB1" target="_blank"><img class="icon" src="../assets/imagenes/iconos/whatsapp-logo.png" alt="Logo de whatsapp">
-            </a>
+            <a class="social-link" href="https://wa.me/qr/LCVV323CI6ZTB1" target="_blank"><img class="icon" src="../assets/imagenes/iconos/whatsapp-logo.png" alt="Logo de whatsapp"></a>
             <a class="social-link" href="https://twitter.com/carlacast89?t=Sejik0FYmQeTZZW63l4Xrw&s=08" target="_blank"><img class="icon" src="../assets/imagenes/iconos/twitter-logo.png" alt="Logo de twitter"></a>
-            </a>
             <a class="social-link" href="https://instagram.com/booksaboutus.tuc?igshid=ZDdkNTZiNTM=" target="_blank"><img class="icon" src="../assets/imagenes/iconos/instagram-logo.png" alt="Logo de instagram"></a>
-            </a>
         </div>
     </footer>
 </body>
