--- a/pages/lesbianas.html
+++ b/pages/lesbianas.html
@@ -31,7 +31,6 @@
                         <li><a href="../pages/gays.html">Gays</a></li>
                         <li><a href="../pages/trans.html">Trans</a></li>
                         <li><a href="../pages/ingles.html">Inglés</a></li>
-                        <li><a href="../pages/sinopsis.html">Sinopsis</a></li>
                     </ul>
                 </div>
             </nav>
@@ -40,7 +39,7 @@
     <main>
         <div class="rainbow"></div>
         <section class="banner-les">
-            <div class="letter-color">
+            <div class="banner-text">
                 <h1>Books About Us</h1>
                 <p>"Mi mejor descubrimiento, mi paso más valiente, la mujer mas impresionante, el amor mas puro, mi letra favorita"</p>
                 <p>Sí, si es contigo. - Calle y Poche</p>
@@ -48,133 +47,153 @@
         </section>
         <section>
             <div>
-                <h2>Para Ellas</h2>
+                <h3>Chicas que aman a chicas</h3>
             </div>
         </section>
         <section class="card-container">
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="g">
+                <img src="../assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>10 días para G</h5>
+                    <p>Cristina Vigo</p>
+                    <a href="../pages/sinopsis.html#gs" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="rio">
+                <img src="../assets/imagenes/book-covers/el-rio.jpg" alt="El río de las primeras veces - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>El río de las primeras veces</h5>
+                    <p>Nando López</p>
+                    <a href="../pages/sinopsis.html#rios" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="siete">
+                <img src="../assets/imagenes/book-covers/los-siete.jpg">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>Los siete maridos de Evelyn Hugo </h5>
+                    <p>Taylor Jenkins Reid</p>
+                    <a href="../pages/sinopsis.html#sietes" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="geo">
+                <img src="../assets/imagenes/book-covers/la-insensata-geometria-del-amor.png" alt="La insensata geometria del amor - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>La insensata geometría del amor</h5>
+                    <p>Susana Guzner</p>
+                    <a href="../pages/sinopsis.html#geos" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="plan">
+                <img src="../assets/imagenes/book-covers/el-plan-c.jpg" alt="El plan c - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>El plan c</h5>
+                    <p>Anna Pólux</p>
+                    <a href="../pages/sinopsis.html#plans" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="12">
+                <img src="../assets/imagenes/book-covers/12700.jpg" alt="12700 km - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>12700 km</h5>
+                    <p>Cris Ginsey</p>
+                    <a href="../pages/sinopsis.html#12s" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="7">
+                <img src="../assets/imagenes/book-covers/7900.jpg" alt="7900 millas - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>7900 millas</h5>
+                    <p>Cris Ginsey</p>
+                    <a href="../pages/sinopsis.html#7s" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="nia">
+                <img src="../assets/imagenes/book-covers/nia.jpg" alt="Nia - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>                        <a href="../index.html" target="_blank">Ver más...</a>
-                    </div>
-            </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
-                <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>Nía</h5>
+                    <p> Patricia Reimóndez Prieto</p>
+                    <a href="../pages/sinopsis.html#nias" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="romeo">
+                <img src="../assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>Me sobran los Romeos</h5>
+                    <p>Anna Pólux</p>
+                    <a href="../pages/sinopsis.html#romeos" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="medusa">
+                <img src="../assets/imagenes/book-covers/medusas.jpg" alt="La isla de las medusas - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>La isla de las medusas</h5>
+                    <p>Anna Pólux</p>
+                    <a href="../pages/sinopsis.html#medusas" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="medusa">
+                <img src="../assets/imagenes/book-covers/perdida.jpg" alt="Perdida en el cosmos - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>Perdida en el cosmos</h5>
+                    <p>Grizzly</p>
+                    <a href="../pages/sinopsis.html#cosmos" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="girl">
+                <img src="../assets/imagenes/book-covers/girl.jpg" alt="Girl, girl, girl - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>Girl, girl girl</h5>
+                    <p>Ross Serra</p>
+                    <a href="../pages/sinopsis.html#girls" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            
+            <div class="card" id="una">
+                <img src="../assets/imagenes/book-covers/una-de-esas.jpg" alt="Una de esas chicas - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>Una de esas chicas</h5>
+                    <p>Inma Miralles</p>
+                    <a href="../pages/sinopsis.html#unas" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="mat">
+                <img src="../assets/imagenes/book-covers/matices.jpg" alt="Matices - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>Matices</h5>
+                    <p>Thais Duthie</p>
+                    <a href="../pages/sinopsis.html#mats" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="cuarta">
+                <img src="../assets/imagenes/book-covers/cuarta-fase.jpg" alt="Cuarta fase - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>Cuarta fase</h5>
+                    <p>Andrea Mira</p>
+                    <a href="../pages/sinopsis.html#cuartas" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="sombra">
+                <img src="../assets/imagenes/book-covers/sombras.jpg" alt="Bajo las sombras - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>Bajo las sombras</h5>
+                    <p>Stef León</p>
+                    <a href="../pages/sinopsis.html#sombras" target="_blank">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+            <div class="card" id="armonia">
+                <img src="../assets/imagenes/book-covers/armonia.jpg" alt="Armonia secreta - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>Armonía secreta</h5>
+                    <p>Stef León</p>
+                    <a href="../pages/sinopsis.html#armonias" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="cao">
+                <img src="../assets/imagenes/book-covers/caos.jpg" alt="Cazar el caos - Portada de libro">
+                <div class="card-content">
+                    <h5>Cazar el caos</h5>
+                    <p>Stef León</p>
+                    <a href="../pages/sinopsis.html#caos" target="_blank">Ver más...</a>
                 </div>
             </div>
         </section>
@@ -189,16 +208,13 @@
                 <li><a href="../pages/gays.html">Gays</a></li>
                 <li><a href="../pages/trans.html">Trans</a></li>
                 <li><a href="../pages/ingles.html">Inglés</a></li>
-                <li><a href="../pages/sinopsis.html">Sinopsis</a></li>
+            </ul>
         </div>
         <div class="social fot-3">
             <span>Seguinos</span>
-            <a class="social-link" href="https://wa.me/qr/LCVV323CI6ZTB1" target="_blank"><img class="icon" src="../assets/imagenes/iconos/whatsapp-logo.png" alt="Logo de whatsapp">
-            </a>
+            <a class="social-link" href="https://wa.me/qr/LCVV323CI6ZTB1" target="_blank"><img class="icon" src="../assets/imagenes/iconos/whatsapp-logo.png" alt="Logo de whatsapp"></a>
             <a class="social-link" href="https://twitter.com/carlacast89?t=Sejik0FYmQeTZZW63l4Xrw&s=08" target="_blank"><img class="icon" src="../assets/imagenes/iconos/twitter-logo.png" alt="Logo de twitter"></a>
-            </a>
             <a class="social-link" href="https://instagram.com/booksaboutus.tuc?igshid=ZDdkNTZiNTM=" target="_blank"><img class="icon" src="../assets/imagenes/iconos/instagram-logo.png" alt="Logo de instagram"></a>
-            </a>
         </div>
     </footer>
 </body>
