--- a/pages/trans.html
+++ b/pages/trans.html
@@ -31,7 +31,6 @@
                         <li><a href="../pages/gays.html">Gays</a></li>
                         <li><a href="#">Trans</a></li>
                         <li><a href="../pages/ingles.html">Inglés</a></li>
-                        <li><a href="../pages/sinopsis.html">Sinopsis</a></li>
                     </ul>
                 </div>
             </nav>
@@ -40,28 +39,94 @@
     <main>
         <div class="rainbow"></div>
         <section class="banner-trans">
-            <div>
+            <div class="banner-text">
                 <h1>Books About Us</h1>
                 <p>"La apariencia física es efímera, la esencia de cada persona es eterna."</p>
             </div>
         </section>
         <section>
             <div>
-                <h2>Para Elles</h2>
+                <h3>No todo es blanco o negro</h3>
             </div>
         </section>
-        <section class="card-container">
+        <section class="card-container" id="jess">
             <div class="card">
-                <img src="../assets/imagenes/book-covers/mi-hermano-se-llama-jessica.png">
+                <img src="../assets/imagenes/book-covers/mi-hermano-se-llama-jessica.png" alt="Mi hermano se llama Jessica- Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G - Cristina Vigo</h5>
-                    <a href="../index.html" target="_blank">Ver más...</a>
+                    <h5>Mi hermano se llama Jessica</h5>
+                    <p>John Boyne</p>
+                    <a href="../pages/sinopsis-trans.html#jesss" target="_blank">Ver más...</a>
                 </div>
             </div>
+            <div class="card" id="us">
+                <img src="../assets/imagenes/book-covers/us.jpg" alt="Us - Portada de libro">
+                <div class="card-content">
+                    <h5>Us</h5>
+                    <p>Sara Soler</p>
+                    <a href="../pages/sinopsis-trans.html#uss" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="amor">
+                <img src="../assets/imagenes/book-covers/amor-trans.jpg" alt="(H)Amor 6 Trans- Portada de libro">
+                <div class="card-content">
+                    <h5>(H)Amor 6 Trans</h5>
+                    <p>Platero Méndez, Lucas R.</p>
+                    <a href="../pages/sinopsis-trans.html#amors" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="mi">
+                <img src="../assets/imagenes/book-covers/mi-adolscencia-trans.jpg" alt="Mi adolescencia trans- Portada de libro">
+                <div class="card-content">
+                    <h5>Mi adolescencia trans</h5>
+                    <p>Josephine Yole Signorelli</p>
+                    <a href="../pages/sinopsis-t.html#miss" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="stay">
+                <img src="../assets/imagenes/book-covers/stay-gold.png" alt="Stay gold: No dejes de ser tú mismo - Portada de libro">
+                <div class="card-content">
+                    <h5>Stay gold: No dejes de ser tú mismo</h5>
+                    <p>Tobly McSmith</p>
+                    <a href="../pages/sinopsis-trans.html#stays" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="george">
+                <img src="../assets/imagenes/book-covers/george-simplemente.jpg" alt="George: Simplemente sé tú mismo - Portada de libro">
+                <div class="card-content">
+                    <h5>George: Simplemente se tu mismo</h5>
+                    <p>Alex Gino</p>
+                    <a href="../pages/sinopsis-t.html#georges" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../assets/imagenes/book-covers/soy-sabrina.jpg" alt="Soy Sabrina, soy Santiago- Portada de libro">
+                <div class="card-content" id="soy">
+                    <h5>Soy Sabrina, soy Santiago</h5>
+                    <p>Sasa Testa</p>
+                    <a href="../pages/sinopsis-t.html#soys" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="humano">
+                <img src="../assets/imagenes/book-covers/que-nos-hace-humanos.jpg" alt="Qué nos hace humanos - Portada de libro">
+                <div class="card-content">
+                    <h5>Qué nos hace humanos</h5>
+                    <p>Jeff Garvin</p>
+                    <a href="../pages/sinopsis-trans.html#humanos" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card" id="siyo">
+                <img src="../assets/imagenes/book-covers/si-yo-fuera.jpg" alt="Si yo fuera tu chica - Portada de libro">
+                <div class="card-content">
+                    <h5>Si yo fuera tu chica</h5>
+                    <p>Meredith Russo</p>
+                    <a href="../pages/sinopsis-trans.html#siyos" target="_blank">Ver más...</a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="grid-footer">
         <div class="fot-1">
-            <a href="../index.html"><img class="logo" src="./assets/imagenes/BAU.png" alt="Logo de la página"></a>
+            <a href="../index.html"><img class="logo" src="../assets/imagenes/BAU.png" alt="Logo de la página"></a>
         </div>
         <div class="list-footer fot-2">
             <ul>
@@ -69,7 +134,7 @@
                 <li><a href="../pages/gays.html">Gays</a></li>
                 <li><a href="#">Trans</a></li>
                 <li><a href="../pages/ingles.html">Inglés</a></li>
-                <li><a href="../pages/sinopsis.html">Sinopsis</a></li>
+            </ul>
         </div>
         <div class="social fot-3">
             <span>Seguinos</span>
